[package]
name = "maa_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"

# 内置的 Git 客户端
git2 = "0.19.0"

# serde 序列化
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.8.26"

# HTTP 客户端
reqwest = { version = "0.11.27", features = ["json","blocking"] }