[package]
name = "maa_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Server basics
axum = "0.7.5"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["cors"] }
http = "1.1.0"
local-ip-address = "0.6.2"
bb8 = "0.8.5"

# Request validation
validator = { version = "0.18.1", features = ["derive"] }

# Logging
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"

# 内置的 Git 客户端
git2 = "0.19.0"

# serde 序列化
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

# HTTP 客户端
reqwest = { version = "0.12.7", features = ["json"] }

# Error handling
thiserror = "1.0.63"

# MongoDB
mongodb = { version = "3.1.0", features = ["compat-3-0-0"] }
chrono = "0.4.38"
bson = "2.11.0"

# Redis
redis = { version = "0.26.1", features = ["tokio-comp"] }

futures = "0.3.30"

# jwt utils
jsonwebtokens = "1.2.0"

# password hash
bcrypt = "0.15.1"
uuid = { version = "1.10.0", features = ["v4"] }

# email
mail-send = "0.4.9"
tokio-rustls = "0.26.0"
rand = "0.8.5"
handlebars = "6.1.0"
axum-macros = "0.4.1"


[lints.clippy]
allow_attributes_without_reason = "warn"
cfg_not_test = "warn"
copy_iterator = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_enum = "warn"
enum_variant_names = "warn"
equatable_if_let = "warn"
error_impl_error = "deny"
expect_used = "deny"
unwarp_used = "deny"
expl_impl_clone_on_copy = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filetype_is_file = "warn"
format_push_string = "warn"
infinite_loop = "warn"
from_iter_instead_of_collect = "warn"
future_not_send = "warn"
enum_glob_use = "warn"
assertions_on_result_states = "deny"
explicit_deref_methods = "warn"
fallible_impl_from = "deny"
get_unwrap = "warn"
indexing_slicing = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
manual_is_variant_and = "warn"
map_unwrap_or = "warn"
read_zero_byte_vec = "warn"
