[package]
name = "maa_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }

# Logging
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"

# 内置的 Git 客户端
git2 = "0.19.0"

# serde 序列化
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"

# HTTP 客户端
reqwest = { version = "0.12.7", features = ["json"] }

# Error handling
thiserror = "1.0.63"
mongodb = { version = "3.1.0", features = ["compat-3-0-0"] }
chrono = "0.4.38"
bson = "2.11.0"

macro-mongo-document = { path = "../macro-mongo-document" }
futures = "0.3.30"

[lints.clippy]
allow_attributes_without_reason = "warn"
cfg_not_test = "warn"
copy_iterator = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_enum = "warn"
enum_variant_names = "warn"
equatable_if_let = "warn"
error_impl_error = "deny"
expect_used = "deny"
unwarp_used = "deny"
expl_impl_clone_on_copy = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filetype_is_file = "warn"
format_push_string = "warn"
infinite_loop = "warn"
from_iter_instead_of_collect = "warn"
future_not_send = "warn"
enum_glob_use = "warn"
assertions_on_result_states = "deny"
explicit_deref_methods = "warn"
fallible_impl_from = "deny"
get_unwrap = "warn"
indexing_slicing = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
manual_is_variant_and = "warn"
map_unwrap_or = "warn"
read_zero_byte_vec = "warn"
